tests/negative/resource_unknown_carrier.ora
resource TokenUnit = MissingCarrier;

contract UnknownCarrier {}
